Small change to the extra evaluation results

--- a/sections/c.back/f.eval.tex
+++ b/sections/c.back/f.eval.tex
@@ -1,77 +1,5 @@
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-remove-ontology-bar.png}
-  \caption{Mean IIC of weakening based repair with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-remove-ontology-violin.png}
-  \caption{Distribution of IIC of weakening based repair with respect to repair via removal per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-mcs-ontology-bar.png}
-  \caption{Mean IIC of weakening based repair with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/iic-mcs-ontology-violin.png}
-    \caption{Distribution of IIC of weakening based repair with respect to repair via a random maximal consistent subset per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-enhance-rem-ontology-bar.png}
-  \caption{Mean IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-enhance-rem-ontology-violin.png}
-  \caption{Distribution of IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-enhance-ontology-bar.png}
-  \caption{Mean IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/iic-enhance-ontology-violin.png}
-    \caption{Distribution of IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-enhance-weaken-ontology-bar.png}
-  \caption{Mean IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/iic-enhance-weaken-ontology-violin.png}
-    \caption{Distribution of IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/iic-mcs-rem-ontology-bar.png}
-  \caption{Mean IIC of repair using a random maximal consistent subset with respect to repair using removal. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/iic-mcs-rem-ontology-violin.png}
-    \caption{Distribution of IIC of repair using random maximal consistent subset with respect to repair using removal per ontology.}
-\end{figure}
-
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \begin{widepage}
     \centering
@@ -110,7 +38,7 @@
   \caption{Results of the evaluation. IIC is given as mean and 95\% confidence interval in brackets.}
 \end{table}
 
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \centering
   \begin{tabular}{|l|r@{ }lr@{ }lr@{ }lr@{ }l|}
@@ -144,79 +72,7 @@
   \caption{Results of the evaluation. The cardinality of the inferred class hierarchy is given as mean and 95\% confidence interval in brackets. $^a$Weakening based repair that keeps the reference ontology as static axioms that are not weakened or replaced.}
 \end{table}
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-remove-ontology-bar.png}
-  \caption{Mean IIC$^+$ of weakening based repair with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-remove-ontology-violin.png}
-  \caption{Distribution of IIC$^+$ of weakening based repair with respect to repair via removal per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-mcs-ontology-bar.png}
-  \caption{Mean IIC$^+$ of weakening based repair with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/eiic-mcs-ontology-violin.png}
-    \caption{Distribution of IIC$^+$ of weakening based repair with respect to repair via a random maximal consistent subset per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-enhance-rem-ontology-bar.png}
-  \caption{Mean IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-enhance-rem-ontology-violin.png}
-  \caption{Distribution of IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-enhance-ontology-bar.png}
-  \caption{Mean IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/eiic-enhance-ontology-violin.png}
-    \caption{Distribution of IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-enhance-weaken-ontology-bar.png}
-  \caption{Mean IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/eiic-enhance-weaken-ontology-violin.png}
-    \caption{Distribution of IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/eiic-mcs-rem-ontology-bar.png}
-  \caption{Mean IIC$^+$ of repair using a random maximal consistent subset with respect to repair using removal. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/eiic-mcs-rem-ontology-violin.png}
-    \caption{Distribution of IIC$^+$ of repair using random maximal consistent subset with respect to repair using removal per ontology.}
-\end{figure}
-
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \begin{widepage}
     \centering
@@ -255,7 +111,7 @@
   \caption{Results of the evaluation. IIC$^+$ is given as mean and 95\% confidence interval in brackets.}
 \end{table}
 
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \centering
   \begin{tabular}{|l|r@{ }lr@{ }lr@{ }lr@{ }l|}
@@ -290,33 +146,7 @@
   \caption{The cardinality of the extended inferred class hierarchy is given as mean and 95\% confidence interval in brackets. $^a$Weakening based repair that keeps the reference ontology as static axioms that are not weakened or replaced.}
 \end{table}
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/calls-cache-bar.png}
-    \caption{Average reasoner calls with different caching strategies when executing axiom weakening of random axioms. Results are the average between the following ontologies: admin, cdpeo, emo, gbm, gfvo, koro, and mamo. Each consistency or entailment query made to the reasoner count as one call.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=\textwidth]{resources/time-cache-bar.png}
-    \caption{Average time required per application of the axiom weakening operator with different caching strategies when executing axiom weakening of random axioms. Results are the average between the following ontologies: admin, cdpeo, emo, gbm, gfvo, koro, and mamo. The results are averaged for the reasoners FaCT++, JFact, Openllet, and HermiT.}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[height=0.9\textheight]{resources/calls-cache-ontology-bar.png}
-    \caption{Average reasoner calls with different caching strategies when executing axiom weakening of random axioms per ontology. Each consistency or entailment query made to the reasoner count as one call.}
-\end{figure}
-
-\begin{figure}[ht]
-    \begin{widepage}[3cm]
-      \centering
-      \includegraphics[width=\textwidth]{resources/time-cache-ontology-reasoner-bar.png}
-    \end{widepage}
-    \caption{Average time required per application of the axiom weakening operator with different caching strategies when executing axiom weakening of random axioms per ontology and reasoner.}
-\end{figure}
-
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \begin{widepage}[5cm]
     \centering
@@ -358,7 +188,7 @@
   \caption{Results of the evaluation of cache effectiveness. The mean number of reasoner calls required for a single weakening is given.}
 \end{table}
 
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \begin{widepage}[4cm]
     \centering
@@ -510,48 +340,7 @@
   \caption{Results of the evaluation of cache effectiveness. The mean execution time required for a single weakening is given.}
 \end{table}
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/steps-ontology-bar.png}
-  \caption{Mean number of weakening steps needed for repairing the ontology. The error bars show the 95\% confidence interval.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \begin{subfigure}[T]{0.25\textwidth}
-    \includegraphics[width=\textwidth]{resources/steps-ontology-violin-1.png}
-  \end{subfigure}
-  \begin{subfigure}[T]{0.715\textwidth}
-    \includegraphics[width=\textwidth]{resources/steps-ontology-violin-2.png}
-  \end{subfigure}
-  \caption{Distribution of required weakening steps for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/calls-ontology-bar.png}
-  \caption{Mean number of reasoner calls required for repairing using axiom weakening by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/calls-ontology-violin.png}
-  \caption{Distribution of reasoner calls required for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/time-ontology-bar.png}
-  \caption{Mean execution time required for repairing using axiom weakening by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/time-ontology-violin.png}
-  \caption{Distribution of execution time required for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{table}[ht]
+\begin{table}[htbp]
   \scriptsize
   \centering
   \begin{tabular}{|l|r@{ }lr@{ }lr@{ }lr@{ }r|}
@@ -585,13 +374,102 @@
   \caption{Results of the evaluation with respect to performance while repairing using axiom weakening, but keeping the axioms of the reference ontology unchanged during repair. Number of weakening iterations, reasoner calls, and total repair time are given as sample mean, with 95\% confidence interval in brackets. The frequency of failed runs is shown as percentage of repairs by weakening that were started but not completed. In parentheses the percentage of total failed runs including those with timeout during generation of the inconsistent ontology. Note that repair using this method has only been attempted after the normal weakening based repair has been successful. This may skew the frequency of failures.}
 \end{table}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
   \centering
-  \includegraphics[width=\textwidth]{resources/steps-enhance-ontology-bar.png}
-  \caption{Mean number of weakening steps needed for repairing the ontology (without weakening axioms in the reference ontology). The error bars show the 95\% confidence interval.}
+  \includegraphics[width=\textwidth]{resources/iic-remove-ontology-violin.png}
+  \caption{Distribution of IIC of weakening based repair with respect to repair via removal per ontology.}
 \end{figure}
 
-\begin{figure}[ht]
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-mcs-ontology-violin.png}
+  \caption{Distribution of IIC of weakening based repair with respect to repair via a random maximal consistent subset per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-enhance-rem-ontology-violin.png}
+  \caption{Distribution of IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-enhance-ontology-violin.png}
+  \caption{Distribution of IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-enhance-weaken-ontology-violin.png}
+  \caption{Distribution of IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-mcs-rem-ontology-violin.png}
+  \caption{Distribution of IIC of repair using random maximal consistent subset with respect to repair using removal per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-remove-ontology-violin.png}
+  \caption{Distribution of IIC$^+$ of weakening based repair with respect to repair via removal per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-mcs-ontology-violin.png}
+  \caption{Distribution of IIC$^+$ of weakening based repair with respect to repair via a random maximal consistent subset per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-enhance-rem-ontology-violin.png}
+  \caption{Distribution of IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-enhance-ontology-violin.png}
+  \caption{Distribution of IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-enhance-weaken-ontology-violin.png}
+  \caption{Distribution of IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-mcs-rem-ontology-violin.png}
+  \caption{Distribution of IIC$^+$ of repair using random maximal consistent subset with respect to repair using removal per ontology.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \begin{subfigure}[T]{0.25\textwidth}
+    \includegraphics[width=\textwidth]{resources/steps-ontology-violin-1.png}
+  \end{subfigure}
+  \begin{subfigure}[T]{0.715\textwidth}
+    \includegraphics[width=\textwidth]{resources/steps-ontology-violin-2.png}
+  \end{subfigure}
+  \caption{Distribution of required weakening steps for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/calls-ontology-violin.png}
+  \caption{Distribution of reasoner calls required for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/time-ontology-violin.png}
+  \caption{Distribution of execution time required for repairing using axiom weakening by ontology. Attempts that failed by timeout were not considered.}
+\end{figure}
+
+\begin{figure}[htbp]
   \centering
   \begin{subfigure}[T]{0.25\textwidth}
     \includegraphics[width=\textwidth]{resources/steps-enhance-ontology-violin-1.png}
@@ -602,27 +480,148 @@
   \caption{Distribution of required weakening steps for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. Attempts that failed by timeout were not considered.}
 \end{figure}
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/calls-enhance-ontology-bar.png}
-  \caption{Mean number of reasoner calls required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{figure}[ht]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\textwidth]{resources/calls-enhance-ontology-violin.png}
   \caption{Distribution of reasoner calls required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. Attempts that failed by timeout were not considered.}
 \end{figure}
 
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{resources/time-enhance-ontology-bar.png}
-  \caption{Mean execution time required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
-\end{figure}
-
-\begin{figure}[ht]
+\begin{figure}[htbp]
   \centering
   \includegraphics[width=\textwidth]{resources/time-enhance-ontology-violin.png}
   \caption{Distribution of execution time required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. Attempts that failed by timeout were not considered.}
 \end{figure}
 
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-remove-ontology-bar.png}
+  \caption{Mean IIC of weakening based repair with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-mcs-ontology-bar.png}
+  \caption{Mean IIC of weakening based repair with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-enhance-rem-ontology-bar.png}
+  \caption{Mean IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-enhance-ontology-bar.png}
+  \caption{Mean IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-enhance-weaken-ontology-bar.png}
+  \caption{Mean IIC of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/iic-mcs-rem-ontology-bar.png}
+  \caption{Mean IIC of repair using a random maximal consistent subset with respect to repair using removal. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-remove-ontology-bar.png}
+  \caption{Mean IIC$^+$ of weakening based repair with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-mcs-ontology-bar.png}
+  \caption{Mean IIC$^+$ of weakening based repair with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-enhance-rem-ontology-bar.png}
+  \caption{Mean IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via removal per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-enhance-ontology-bar.png}
+  \caption{Mean IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to repair via a random maximal consistent subset per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-enhance-weaken-ontology-bar.png}
+  \caption{Mean IIC$^+$ of weakening based repair (without weakening axioms in the reference ontology) with respect to normal repair using axiom weakening per ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/eiic-mcs-rem-ontology-bar.png}
+  \caption{Mean IIC$^+$ of repair using a random maximal consistent subset with respect to repair using removal. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/calls-cache-bar.png}
+  \caption{Average reasoner calls with different caching strategies when executing axiom weakening of random axioms. Results are the average between the following ontologies: admin, cdpeo, emo, gbm, gfvo, koro, and mamo. Each consistency or entailment query made to the reasoner count as one call.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/time-cache-bar.png}
+  \caption{Average time required per application of the axiom weakening operator with different caching strategies when executing axiom weakening of random axioms. Results are the average between the following ontologies: admin, cdpeo, emo, gbm, gfvo, koro, and mamo. The results are averaged for the reasoners FaCT++, JFact, Openllet, and HermiT.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[height=0.9\textheight]{resources/calls-cache-ontology-bar.png}
+  \caption{Average reasoner calls with different caching strategies when executing axiom weakening of random axioms per ontology. Each consistency or entailment query made to the reasoner count as one call.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{widepage}[3cm]
+    \centering
+    \includegraphics[width=\textwidth]{resources/time-cache-ontology-reasoner-bar.png}
+  \end{widepage}
+  \caption{Average time required per application of the axiom weakening operator with different caching strategies when executing axiom weakening of random axioms per ontology and reasoner.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/steps-ontology-bar.png}
+  \caption{Mean number of weakening steps needed for repairing the ontology. The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/calls-ontology-bar.png}
+  \caption{Mean number of reasoner calls required for repairing using axiom weakening by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/time-ontology-bar.png}
+  \caption{Mean execution time required for repairing using axiom weakening by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/steps-enhance-ontology-bar.png}
+  \caption{Mean number of weakening steps needed for repairing the ontology (without weakening axioms in the reference ontology). The error bars show the 95\% confidence interval.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/calls-enhance-ontology-bar.png}
+  \caption{Mean number of reasoner calls required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
+\end{figure}
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\textwidth]{resources/time-enhance-ontology-bar.png}
+  \caption{Mean execution time required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
+\end{figure}
