Added some implementation parts

--- a/sections/b.main/2.background/3.bugs.tex
+++ b/sections/b.main/2.background/3.bugs.tex
@@ -49,3 +49,4 @@ Another source for bugs in ontologies may arise while merging different ontologi
   Given the vocabulary $N_C = \{ C, D \}$ and $N_I = \{ a, b \}$, the two \SROIQ ontology $\Omc_1 = \{ D \sqsubseteq C, D(a) \}$ and $\Omc_2 = \{ C \sqsubseteq \lnot D, C(b) \}$ are by themselves consistent. If we merge them, however, the resulting ontology $\Omc_1 \cup \Omc_2$ is no longer consistent.
 \end{example}
 
+% TODO make this shorter
