--- a/sections/b.main/6.conclution.tex
+++ b/sections/b.main/6.conclution.tex
@@ -1,3 +1,8 @@
 
+We have proposed refinement operators and an axiom weakening operator for all aspects of \SROIQ and shown that for repairs of inconsistent ontologies weakening can, in some cases, significantly outperform removal.
+
+Further additions to the refinement operators may be studied, e.g., using non-simple roles in the upward and downward covers in certain contexts. Relaxing the allowed weakening for RIAs may also be considered, and to cover also extensions to regularity conditions such as those studied in \cite{DBLP:conf/cade/Kazakov10}. We have also seen that the repair algorithm likely needs better heuristics to steer the selection of bad and weakened axioms in order to result in better repairs. Future work could further focus on finding robust measures for comparing the quality of repairs.
+
+% TODO mention termination?
 % TODO
 
