--- a/sections/c.back/f.eval.tex
+++ b/sections/c.back/f.eval.tex
@@ -1,4 +1,6 @@
 
+This appendix contains some more results produced by the evaluation. Most of these are not particularly more interesting than the ones already shown in \cref{evaluation} and have therefore, and for space reasons, not been included in the main part of the thesis.
+
 \begin{table}[htbp]
   \scriptsize
   \begin{widepage}
@@ -144,48 +146,6 @@
     \hline
   \end{tabular}
   \caption{The cardinality of the extended inferred class hierarchy is given as mean and 95\% confidence interval in brackets. $^a$Weakening based repair that keeps the reference ontology as static axioms that are not weakened or replaced.}
-\end{table}
-
-\begin{table}[htbp]
-  \scriptsize
-  \begin{widepage}[5cm]
-    \centering
-    \addtolength{\tabcolsep}{-1mm}
-    \begin{tabular}{|l|rrrrrr|rrrrrr|rrrrrr|}
-      \cline{2-19}
-      \multicolumn{1}{l|}{} & \multicolumn{18}{c|}{\hspace{-9mm}Reasoner calls per weakening} \\
-      \multicolumn{1}{l|}{} & \multicolumn{6}{c}{Caching using transitivity} & \multicolumn{6}{c}{Simple caching} & \multicolumn{6}{c|}{No caching} \\
-      \multicolumn{1}{l|}{} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & 100 \\
-      \hline
-      admin & 1096 & 381 & 222 & 131 & 64 & 35
-        & 15138 & 4072 & 2115 & 1092 & 459 & 236
-        & 41105 & 42224 & 41288 & 41376 & 42663 & 41751 \\
-      cdpeo & 2110 & 869 & 522 & 301 & 136 & 75
-        & 13621 & 4936 & 2694 & 1436 & 608 & 312
-        & 29051 & 27289 & 28617 & 28818 & 28244 & 29315 \\
-      emo & 2652 & 1720 & 1355 & 864 & 463 & 258
-        & 7781 & 3436 & 2784 & 2023 & 1103 & 619
-        & 12524 & 12357 & 12134 & 12548 & 12462 & 12552 \\
-      gbm & 3019 & 1577 & 1074 & 674 & 309 & 168
-        & 12572 & 5065 & 3284 & 2057 & 956 & 503
-        & 19490 & 20945 & 21330 & 20581 & 20780 & 20801 \\
-      gfvo &  1737 & 891 & 575 & 335 & 151 & 80
-        & 2828 & 1975 & 1524 & 1043 & 539 & 293
-        & 4058 & 3973 & 4104 & 4012 & 3977 & 4003 \\
-      koro & 2006 & 952 & 591 & 344 & 157 & 80
-        & 5154 & 3046 & 2272 & 1465 & 721 & 382
-        & 7271 & 7618 & 7181 & 7223 & 7233 & 7422 \\
-      mamo &  1984 & 844 & 511 & 286 & 122 & 61
-        & 3557 & 2140 & 1488 & 943 & 449 & 234
-        & 5060 & 5011 & 5059 & 5037 & 4997 & 4998 \\
-      \hline
-      Overall & 2086 & 1033 & 693 & 419 & 200 & 108
-        & 8664 & 3524 & 2309 & 1437 & 691 & 368
-        & 16937 & 17059 & 17102 & 17007 & 17194 & 17263 \\
-      \hline
-    \end{tabular}
-  \end{widepage}
-  \caption{Results of the evaluation of cache effectiveness. The mean number of reasoner calls required for a single weakening is given.}
 \end{table}
 
 \begin{table}[htbp]
@@ -342,6 +302,48 @@
 
 \begin{table}[htbp]
   \scriptsize
+  \begin{widepage}[5cm]
+    \centering
+    \addtolength{\tabcolsep}{-1mm}
+    \begin{tabular}{|l|rrrrrr|rrrrrr|rrrrrr|}
+      \cline{2-19}
+      \multicolumn{1}{l|}{} & \multicolumn{18}{c|}{\hspace{-9mm}Reasoner calls per weakening} \\
+      \multicolumn{1}{l|}{} & \multicolumn{6}{c}{Caching using transitivity} & \multicolumn{6}{c}{Simple caching} & \multicolumn{6}{c|}{No caching} \\
+      \multicolumn{1}{l|}{} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{5} & \multicolumn{1}{c}{10} & \multicolumn{1}{c}{20} & \multicolumn{1}{c}{50} & 100 \\
+      \hline
+      admin & 1096 & 381 & 222 & 131 & 64 & 35
+        & 15138 & 4072 & 2115 & 1092 & 459 & 236
+        & 41105 & 42224 & 41288 & 41376 & 42663 & 41751 \\
+      cdpeo & 2110 & 869 & 522 & 301 & 136 & 75
+        & 13621 & 4936 & 2694 & 1436 & 608 & 312
+        & 29051 & 27289 & 28617 & 28818 & 28244 & 29315 \\
+      emo & 2652 & 1720 & 1355 & 864 & 463 & 258
+        & 7781 & 3436 & 2784 & 2023 & 1103 & 619
+        & 12524 & 12357 & 12134 & 12548 & 12462 & 12552 \\
+      gbm & 3019 & 1577 & 1074 & 674 & 309 & 168
+        & 12572 & 5065 & 3284 & 2057 & 956 & 503
+        & 19490 & 20945 & 21330 & 20581 & 20780 & 20801 \\
+      gfvo &  1737 & 891 & 575 & 335 & 151 & 80
+        & 2828 & 1975 & 1524 & 1043 & 539 & 293
+        & 4058 & 3973 & 4104 & 4012 & 3977 & 4003 \\
+      koro & 2006 & 952 & 591 & 344 & 157 & 80
+        & 5154 & 3046 & 2272 & 1465 & 721 & 382
+        & 7271 & 7618 & 7181 & 7223 & 7233 & 7422 \\
+      mamo &  1984 & 844 & 511 & 286 & 122 & 61
+        & 3557 & 2140 & 1488 & 943 & 449 & 234
+        & 5060 & 5011 & 5059 & 5037 & 4997 & 4998 \\
+      \hline
+      Overall & 2086 & 1033 & 693 & 419 & 200 & 108
+        & 8664 & 3524 & 2309 & 1437 & 691 & 368
+        & 16937 & 17059 & 17102 & 17007 & 17194 & 17263 \\
+      \hline
+    \end{tabular}
+  \end{widepage}
+  \caption{Results of the evaluation of cache effectiveness. The mean number of reasoner calls required for a single weakening is given.}
+\end{table}
+
+\begin{table}[htbp]
+  \scriptsize
   \centering
   \begin{tabular}{|l|r@{ }lr@{ }lr@{ }lr@{ }r|}
     \cline{2-9}
@@ -373,6 +375,8 @@
   \end{tabular}
   \caption{Results of the evaluation with respect to performance while repairing using axiom weakening, but keeping the axioms of the reference ontology unchanged during repair. Number of weakening iterations, reasoner calls, and total repair time are given as sample mean, with 95\% confidence interval in brackets. The frequency of failed runs is shown as percentage of repairs by weakening that were started but not completed. In parentheses the percentage of total failed runs including those with timeout during generation of the inconsistent ontology. Note that repair using this method has only been attempted after the normal weakening based repair has been successful. This may skew the frequency of failures.}
 \end{table}
+
+\iffalse
 
 \begin{figure}[htbp]
   \centering
@@ -625,3 +629,5 @@
   \includegraphics[width=\textwidth]{resources/time-enhance-ontology-bar.png}
   \caption{Mean execution time required for repairing using axiom weakening (without weakening axioms in the reference ontology) by ontology. The error bars show the 95\% confidence interval. Attempts that failed by timeout were not considered.}
 \end{figure}
+
+\fi
