More on the implementation

--- a/biblio.bib
+++ b/biblio.bib
@@ -2141,3 +2141,12 @@
   year        = {2006},
   institution = {Technical report, UMIACS, 2005-66}
 }
+
+@inproceedings{coulom2006efficient,
+  title={Efficient selectivity and backup operators in Monte-Carlo tree search},
+  author={Coulom, R{\'e}mi},
+  booktitle={International conference on computers and games},
+  pages={72--83},
+  year={2006},
+  organization={Springer}
+}
