--- a/sections/b.main/2.background/3.bugs.tex
+++ b/sections/b.main/2.background/3.bugs.tex
@@ -13,7 +13,7 @@ Syntactic defects in an ontology can be caused by a statement that does not conf
   The axioms $C \sqsubseteq \sqsubseteq D$, $C(r(a, b))$, or $C \sqsubset D$ are all obviously not syntactically correct \SROIQ axioms. Similarly, the concepts $C \sqcup \sqcap D$, $\less 3 t.\self$, and $\self \sqcup D$ do all not match the grammar for concept expressions.
 \end{example}
 
-There may however be some additional restrictions on what constitutes a valid ontology or program that is not based solely on the grammatical rules. For ontologies, these might be for example the restrictions placed upon the form of the graph for a specific OWL profile. In the example of \SROIQ, these include the restricted use of non-simple roles and the regularity condition placed on the RBox. For programming languages, a similar restriction to this may be the requirement for definition before use or the presence of a type system\footnote{When viewed from a different perspective, a type error can also be seen as the unsatisfiability of (or ambiguity in) the type assertions. In this way, it is related to an inconsistency in the context of ontologies in the case of unsatisfiability (or missing inferences in the case of ambiguity).}. These restrictions reduce the space of valid programs. Restrictions of this kind can often be much easier to violate and harder to debug than the first kind of syntactic defects that is a violation of the grammar.
+There may however be some additional restrictions on what constitutes a valid ontology or program that is not based solely on the grammatical rules. For ontologies, these might be for example the restrictions placed upon the form of the graph for a specific OWL profile. In the example of \SROIQ, these include the restricted use of non-simple roles and the regularity condition placed on the RBox. For programming languages, a similar restriction to this may be the requirement for definition before use or the presence of a type system. These restrictions reduce the space of valid programs. Restrictions of this kind can often be much easier to violate and harder to debug than the first kind of syntactic defects that is a violation of the grammar.
 
 \begin{example}
   Given the vocabulary $N_C = \{ C \}$ and $N_R = \{ a, b, c \}$, the \SROIQ ontology $\Omc = \{ a \sqsubseteq b, b \circ c \sqsubseteq a \}$ is not valid. This is because it does not satisfy the regularity condition in \SROIQ. This can simply be verified by showing that no preorder $\preceq$ exists for which $a \preceq b$ and $a \not\preceq b$ hold.
